# dockerswarmp1

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEV_GUIDE.md  Justfile  PLAN.md  README.md  pyproject.toml
.github/workflows/: deploy.yaml
docker/: Dockerfile.api  Dockerfile.frontend  compose.yaml  stack.yaml
docs/: DEV_GUIDE.md  GEMINI_SECOND_OPINION_PROMPT.md  INBOX.md  MANUAL_DO_VIDEO.md  REBUILD_MANUAL.md  SECURITY_REVIEW.md  VIDEO_OUTLINE.md  VIDEO_SCRIPT.md  VPS_BOOTSTRAP.md  firewall.html
docs/reference/: README_hostinger_video_anterior.md
frontend/: default.conf  index.html  style.css
scripts/: api_entrypoint  vps_bootstrap  watcher  webhook-watcher.service
src/dockerswarmp1/: healthcheck.py  main.py
tests/: conftest.py  test_main.py
