[project]
name = "dockerswarmp1"
version = "0.0.1"
description = "This is a base docker dev env in Python."
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
authors = [{ name = "Luiz Otávio Miranda" }]

dependencies = [
  "fastapi>=0.124.4",
  "uvicorn[standard]>=0.38.0",
  "uvloop>=0.22.1",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pyright>=1.1.408", "pytest>=9.0.2", "ruff>=0.14.11"]

[project.urls]
Homepage = "https://www.otaviomiranda.com.br/"
Documentation = "https://github.com/luizomf/dockerwarmp1"
Repository = "https://github.com/luizomf/dockerwarmp1"
Issues = "https://github.com/luizomf/dockerwarmp1/issues"

[project.scripts]
healthcheck = "dockerswarmp1.healthcheck:run"

[tool.ruff]
line-length = 88
target-version = "py314"
fix = true
show-fixes = true
indent-width = 2
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "INP001", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101", "COM812"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["dockerswarmp1"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["src", "tests"]
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['./src/dockerswarmp1']
